[package]
name = "moon-driver-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
windows = { version = "0.58.0", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_Security",
] }
